--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,37 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	  <groupId>org.apache.hbase</groupId>
+	  <artifactId>hbase</artifactId>
+	  <version>0.94.18</version>
+	  <scope>compile</scope>
+    </dependency>
+    <dependency>
+ 	  <groupId>org.apache.hadoop</groupId>
+ 	  <artifactId>hadoop-core</artifactId>
+ 	  <version>1.0.4</version>
+    </dependency>
+    <dependency>
+	  <groupId>net.sf.opencsv</groupId>
+	  <artifactId>opencsv</artifactId>
+	  <version>2.0</version>
+    </dependency>
+    <dependency>
+	  <groupId>com.vividsolutions</groupId>
+	  <artifactId>jts</artifactId>
+	  <version>1.13</version>
+    </dependency>
+            
   </dependencies>
+       
+  <repositories>
+  	<repository>
+    	<id>osgeo</id>
+        <name>Open Source Geospatial Foundation Repository</name>
+        <url>http://download.osgeo.org/webdav/geotools/</url>
+    </repository>
+  </repositories>     
 
   <scm>
     <connection>scm:git:https://github.com/faisalmoeen/hbasealgebra.git</connection>
