--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,15 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+	  <groupId>org.apache.hbase</groupId>
+	  <artifactId>hbase</artifactId>
+	  <version>0.94.18</version>
     </dependency>
     <dependency>
 	  <groupId>org.apache.hbase</groupId>
 	  <artifactId>hbase</artifactId>
+	  <type>test-jar</type>
 	  <version>0.94.18</version>
-	  <scope>compile</scope>
     </dependency>
     <dependency>
  	  <groupId>org.apache.hadoop</groupId>
@@ -48,6 +47,32 @@
     	<artifactId>geohash-java</artifactId>
     	<version>1.0.6</version>
     </dependency>
+    <dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.6</version>
+    </dependency>
+    <dependency>
+	 <groupId>org.apache.hadoop</groupId>
+	 <artifactId>hadoop-hdfs</artifactId>
+	 <version>2.4.0</version>
+   </dependency>
+   <dependency>
+	<groupId>org.apache.hadoop</groupId>
+	<artifactId>hadoop-test</artifactId>
+	<version>1.0.4</version>
+   </dependency>
+   <dependency>
+	<groupId>org.apache.phoenix</groupId>
+	<artifactId>phoenix-core</artifactId>
+	<version>3.0.0-incubating</version>
+   </dependency>
+   <dependency>
+	<groupId>com.googlecode.json-simple</groupId>
+	<artifactId>json-simple</artifactId>
+	<version>1.1</version>
+  </dependency>   
+    
   </dependencies>
        
   <repositories>
